code/human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_117.wast
(assert_invalid
  (module (func (unreachable) (select)))
  "type mismatch"
)